welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:25: error: not found: value position
  do{ position()
      ^